# Python

./: pyproject.toml
ProjetoClima/: pyproject.toml
ProjetoClima/projetoclima/: __init__.py  request.py
